--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,5 +21,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':costaModels')
+    compile 'com.squareup.retrofit:retrofit:1.6.1'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'com.octo.android.robospice:robospice:1.4.14'
+    compile 'io.reactivex:rxjava:1.0.0-rc.4'
+
 }
