--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.2'
+        classpath 'com.github.rholder:gradle-one-jar:1.0.4'
     }
 }
 
@@ -16,5 +17,5 @@ allprojects {
     }
 }
 
-task stage(dependsOn: [':web:clean', ':web:jar'])
+task stage(dependsOn: [':web:appJar'])
 
